// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component should render correctly when disabled is true 1`] = `
Array [
  ".button-0-2-1 {
  cursor: pointer;
  outline: 0;
  padding: 8px 16px;
  border-radius: 4px;
}
.button-0-2-1:hover {
  background-color: #0000000a;
}
.button-0-2-1:focus {
  background-color: #0000001f;
}
.button-0-2-1:disabled {
  cursor: default;
}
.label-0-2-2 {
  font-family: Roboto, sans-serif;
  font-weight: 500;
  letter-spacing: 1.23px;
  text-transform: uppercase;
}
.button-d0-0-2-3 {
  background-color: #f4ab34;
  border: 0;
  height: 40px;
  width: auto;
}
.button-d0-0-2-3:disabled {
  background-color: #bbbbbb;
}
.label-d1-0-2-4 {
  color: #333333;
}",
  <div>
    <button
      class="button-0-2-1 button-d0-0-2-3"
      disabled=""
      type="button"
    >
      <span
        class="label-0-2-2 label-d1-0-2-4"
      >
        button
      </span>
    </button>
  </div>,
]
`;

exports[`Button component should render correctly when the fullWidth is true 1`] = `
Array [
  ".button-0-2-1 {
  cursor: pointer;
  outline: 0;
  padding: 8px 16px;
  border-radius: 4px;
}
.button-0-2-1:hover {
  background-color: #0000000a;
}
.button-0-2-1:focus {
  background-color: #0000001f;
}
.button-0-2-1:disabled {
  cursor: default;
}
.label-0-2-2 {
  font-family: Roboto, sans-serif;
  font-weight: 500;
  letter-spacing: 1.23px;
  text-transform: uppercase;
}
.button-d0-0-2-3 {
  background-color: #f4ab34;
  border: 0;
  height: 40px;
  width: 100%;
}
.button-d0-0-2-3:disabled {
  background-color: #bbbbbb;
}
.label-d1-0-2-4 {
  color: #333333;
}",
  <div>
    <button
      class="button-0-2-1 button-d0-0-2-3"
      type="button"
    >
      <span
        class="label-0-2-2 label-d1-0-2-4"
      >
        button
      </span>
    </button>
  </div>,
]
`;

exports[`Button component should render correctly when the size is medium 1`] = `
Array [
  ".button-0-2-1 {
  cursor: pointer;
  outline: 0;
  padding: 8px 16px;
  border-radius: 4px;
}
.button-0-2-1:hover {
  background-color: #0000000a;
}
.button-0-2-1:focus {
  background-color: #0000001f;
}
.button-0-2-1:disabled {
  cursor: default;
}
.label-0-2-2 {
  font-family: Roboto, sans-serif;
  font-weight: 500;
  letter-spacing: 1.23px;
  text-transform: uppercase;
}
.button-d0-0-2-3 {
  background-color: #f4ab34;
  border: 0;
  height: 48px;
  width: auto;
}
.button-d0-0-2-3:disabled {
  background-color: #bbbbbb;
}
.label-d1-0-2-4 {
  color: #333333;
}",
  <div>
    <button
      class="button-0-2-1 button-d0-0-2-3"
      type="button"
    >
      <span
        class="label-0-2-2 label-d1-0-2-4"
      >
        button
      </span>
    </button>
  </div>,
]
`;

exports[`Button component should render correctly when the size is semi 1`] = `
Array [
  ".button-0-2-1 {
  cursor: pointer;
  outline: 0;
  padding: 8px 16px;
  border-radius: 4px;
}
.button-0-2-1:hover {
  background-color: #0000000a;
}
.button-0-2-1:focus {
  background-color: #0000001f;
}
.button-0-2-1:disabled {
  cursor: default;
}
.label-0-2-2 {
  font-family: Roboto, sans-serif;
  font-weight: 500;
  letter-spacing: 1.23px;
  text-transform: uppercase;
}
.button-d0-0-2-3 {
  background-color: #f4ab34;
  border: 0;
  height: 32px;
  width: auto;
}
.button-d0-0-2-3:disabled {
  background-color: #bbbbbb;
}
.label-d1-0-2-4 {
  color: #333333;
}",
  <div>
    <button
      class="button-0-2-1 button-d0-0-2-3"
      type="button"
    >
      <span
        class="label-0-2-2 label-d1-0-2-4"
      >
        button
      </span>
    </button>
  </div>,
]
`;

exports[`Button component should render correctly when the variant is outlined 1`] = `
Array [
  ".button-0-2-1 {
  cursor: pointer;
  outline: 0;
  padding: 8px 16px;
  border-radius: 4px;
}
.button-0-2-1:hover {
  background-color: #0000000a;
}
.button-0-2-1:focus {
  background-color: #0000001f;
}
.button-0-2-1:disabled {
  cursor: default;
}
.label-0-2-2 {
  font-family: Roboto, sans-serif;
  font-weight: 500;
  letter-spacing: 1.23px;
  text-transform: uppercase;
}
.button-d0-0-2-3 {
  background-color: transparent;
  border: 1px solid #f4ab34;
  height: 40px;
  width: auto;
}
.button-d0-0-2-3:disabled {
  background-color: transparent;
  border: 1px solid #bbbbbb;
}
.label-d1-0-2-4 {
  color: #333333;
}",
  <div>
    <button
      class="button-0-2-1 button-d0-0-2-3"
      type="button"
    >
      <span
        class="label-0-2-2 label-d1-0-2-4"
      >
        button
      </span>
    </button>
  </div>,
]
`;

exports[`Button component should render correctly when the variant is outlined and is disabled 1`] = `
Array [
  ".button-0-2-1 {
  cursor: pointer;
  outline: 0;
  padding: 8px 16px;
  border-radius: 4px;
}
.button-0-2-1:hover {
  background-color: #0000000a;
}
.button-0-2-1:focus {
  background-color: #0000001f;
}
.button-0-2-1:disabled {
  cursor: default;
}
.label-0-2-2 {
  font-family: Roboto, sans-serif;
  font-weight: 500;
  letter-spacing: 1.23px;
  text-transform: uppercase;
}
.button-d0-0-2-3 {
  background-color: transparent;
  border: 1px solid #f4ab34;
  height: 40px;
  width: auto;
}
.button-d0-0-2-3:disabled {
  background-color: transparent;
  border: 1px solid #bbbbbb;
}
.label-d1-0-2-4 {
  color: #777777;
}",
  <div>
    <button
      class="button-0-2-1 button-d0-0-2-3"
      disabled=""
      type="button"
    >
      <span
        class="label-0-2-2 label-d1-0-2-4"
      >
        button
      </span>
    </button>
  </div>,
]
`;

exports[`Button component should render correctly when the variant is text 1`] = `
Array [
  ".button-0-2-1 {
  cursor: pointer;
  outline: 0;
  padding: 8px 16px;
  border-radius: 4px;
}
.button-0-2-1:hover {
  background-color: #0000000a;
}
.button-0-2-1:focus {
  background-color: #0000001f;
}
.button-0-2-1:disabled {
  cursor: default;
}
.label-0-2-2 {
  font-family: Roboto, sans-serif;
  font-weight: 500;
  letter-spacing: 1.23px;
  text-transform: uppercase;
}
.button-d0-0-2-3 {
  background-color: transparent;
  border: 0;
  height: 40px;
  width: auto;
}
.button-d0-0-2-3:disabled {
  background-color: transparent;
}
.label-d1-0-2-4 {
  color: #333333;
}",
  <div>
    <button
      class="button-0-2-1 button-d0-0-2-3"
      type="button"
    >
      <span
        class="label-0-2-2 label-d1-0-2-4"
      >
        button
      </span>
    </button>
  </div>,
]
`;

exports[`Button component should render correctly when the variant is text and is disabled 1`] = `
Array [
  ".button-0-2-1 {
  cursor: pointer;
  outline: 0;
  padding: 8px 16px;
  border-radius: 4px;
}
.button-0-2-1:hover {
  background-color: #0000000a;
}
.button-0-2-1:focus {
  background-color: #0000001f;
}
.button-0-2-1:disabled {
  cursor: default;
}
.label-0-2-2 {
  font-family: Roboto, sans-serif;
  font-weight: 500;
  letter-spacing: 1.23px;
  text-transform: uppercase;
}
.button-d0-0-2-3 {
  background-color: transparent;
  border: 0;
  height: 40px;
  width: auto;
}
.button-d0-0-2-3:disabled {
  background-color: transparent;
}
.label-d1-0-2-4 {
  color: #777777;
}",
  <div>
    <button
      class="button-0-2-1 button-d0-0-2-3"
      disabled=""
      type="button"
    >
      <span
        class="label-0-2-2 label-d1-0-2-4"
      >
        button
      </span>
    </button>
  </div>,
]
`;

exports[`Button component should render correctly with default props 1`] = `
Array [
  ".button-0-2-1 {
  cursor: pointer;
  outline: 0;
  padding: 8px 16px;
  border-radius: 4px;
}
.button-0-2-1:hover {
  background-color: #0000000a;
}
.button-0-2-1:focus {
  background-color: #0000001f;
}
.button-0-2-1:disabled {
  cursor: default;
}
.label-0-2-2 {
  font-family: Roboto, sans-serif;
  font-weight: 500;
  letter-spacing: 1.23px;
  text-transform: uppercase;
}
.button-d0-0-2-3 {
  background-color: #f4ab34;
  border: 0;
  height: 40px;
  width: auto;
}
.button-d0-0-2-3:disabled {
  background-color: #bbbbbb;
}
.label-d1-0-2-4 {
  color: #333333;
}",
  <div>
    <button
      class="button-0-2-1 button-d0-0-2-3"
      type="button"
    >
      <span
        class="label-0-2-2 label-d1-0-2-4"
      >
        button
      </span>
    </button>
  </div>,
]
`;
